--- a/public/less/style.less
+++ b/public/less/style.less
@@ -49,6 +49,8 @@
   width: 40px;
   height: 40px;
   position: relative;
+  top: 50%;
+  left:50%;
   .rotation-container {
     position: absolute;
     width: 100%;
