--- a/public/less/style.css
+++ b/public/less/style.css
@@ -41,6 +41,8 @@ body {
   width: 40px;
   height: 40px;
   position: relative;
+  top: 50%;
+  left: 50%;
 }
 .rotation .rotation-container {
   position: absolute;
