--- a/public/less/style.less
+++ b/public/less/style.less
@@ -209,7 +209,7 @@
   background: rgba(0, 0, 0, 0.8);
 }
 .wedding-cover {
-  background-image: url(../../images/top.jpg);
+
   background-position: 0px 0px;
   background-size: cover;
   position: relative;
@@ -569,12 +569,12 @@ li.one-third {
   }
   p {
     width: 300px;
-    margin: 44px 0 0 204px;
+    margin: 0 auto;
     border: 3px solid #fff;
     height:200px;
-    color: #000;
-    border-radius: 8px;
-    padding-top: 76px;
+    color: #fff;
+    background: rgba(251, 99, 88, 0.86);
+    padding: 50px 68px;
     box-shadow: 10px 10px 5px #888888;
     -moz- box-shadow: 10px 10px 5px #888888;
     -webkit- box-shadow: 10px 10px 5px #888888;
@@ -657,10 +657,6 @@ li.one-third {
 }
 
 
-/*==================== 婚纱头部====================*/
-#dress-cover {
-  background-image: url(../../images/dress-top.jpg);
-}
 
 
 /*** 
@@ -948,7 +944,6 @@ li.one-third {
 .makeup-subtitles {
   height: 500px !important;
   .wedding-cover {
-    background-image: url(../../images/makeup-top.jpg);
     height: 500px !important;
   }
   .desc {
@@ -1118,11 +1113,8 @@ li.one-third {
 ====================================================================
 ***/
 .theme-cover {
-  .wedding-cover {
-    background-image: url(../../images/theme-bg.jpg);
-    h2 {
-      margin-top: 96px;
-    }
+  h2 {
+    margin-top: 96px;
   }
 }
 
@@ -1308,11 +1300,6 @@ li.one-third {
  婚礼安排头部
 ====================================================================
 ***/
-.arrange-cover{
-  .wedding-cover {
-    background-image: url(../../images/arrang.jpg);
-  }
-}
 #wedding-arrange {
   p {
     text-indent: 30px;
@@ -1368,11 +1355,6 @@ li.one-third {
  全球婚礼头部
 ====================================================================
 ***/
-.global-cover {
-  .wedding-cover {
-    background-image: url(../../images/global.jpg);
-  }
-}
 #wedding-global{
   margin-top: 70px;
   
@@ -1504,9 +1486,6 @@ li.one-third {
 联系我们
 ====================================================================
 ***/
-.contact-cover {
- background-image: url(../../images/contact.jpg);
-}
 #contact-content {
   margin-top: 2em;
   h3 {
@@ -1524,9 +1503,9 @@ li {
 }
 }
 #ajaxform {
-input {
-  color: #000;
-}
+  input {
+    color: #000;
+  }
   label {
     color: #000;
   }
