--- a/view/contact.html
+++ b/view/contact.html
@@ -46,7 +46,7 @@
 									<li class="dropdown">
 										<a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">主题婚礼<span class="caret"></span></a>
 										<ul class="dropdown-menu">
-											<li><a href="./theme.html#west" target="_blank">西方</a></li>
+											<li><a href="./theme.html" target="_blank">西方</a></li>
 											<li><a href="./theme.html#ancient" target="_blank">古色</a></li>
 											<li><a href="./theme.html#dream" target="_blank">梦幻</a></li>
 											<li><a href="./theme.html#modern" target="_blank">现代</a></li>	
@@ -68,7 +68,7 @@
 			==================================================== -->				
 			<div id="wedding-subtitles" >
 				<div class="wedding-overlay"></div>
-				<div class="wedding-cover text-center contact-cover"  data-stellar-background-ratio="0.5" >
+				<div class="wedding-cover text-center contact-cover"  data-stellar-background-ratio="0.5" style=" background-image: url(../images/contact.jpg);">
 					<div class="desc">
 						<h2>从现在出发，联系我们，定制幸福</h2>						
 					</div>
@@ -82,7 +82,7 @@
 			<div id="contact-content">
 				<div class="container">
 					<div class="row">
-						<div class="col-md-6">
+						<div class="col-md-6 animate-box">
 							<h3>Our Address</h3>
 							<span>我的联系方式</span>
 							<ul>
@@ -93,7 +93,7 @@
 								<li><i class="iconfont icon-bubbles"></i>微信：weddingplan</li>
 							</ul>
 						</div>
-						<div class="col-md-6">
+						<div class="col-md-6 animate-box">
 							<h3>Your Address</h3>
 							<span>您的联系方式</span>
 							<form name="ad-from" id="ajaxform">
