--- a/view/makeup.html
+++ b/view/makeup.html
@@ -68,7 +68,7 @@
 			==================================================== -->				
 			<div id="wedding-subtitles" class="makeup-subtitles">
 				<div class="wedding-overlay"></div>
-				<div class="wedding-cover text-center"></div>
+				<div class="wedding-cover text-center" style=" background-image: url(../images/makeup-top.jpg);"></div>
 			</div>
 
 		<!-- ===================================================
@@ -141,7 +141,7 @@
 							</li>
 						</ul>
 					</div>					
-					<div class="ad">
+					<div class="ad animate-box">
 						<div class="ad-over"></div>
 						<div class="ad-content ">
 							<h2>Wedding Plan</h2>
@@ -205,7 +205,7 @@
 							</li>
 						</ul>
 					</div>
-					<div class="ad">
+					<div class="ad animate-box">
 						<div class="ad-over"></div>
 						<div class="ad-content ">
 							<h2>Wedding Plan</h2>
@@ -260,7 +260,7 @@
 							</li>					
 						</ul>
 					</div>
-					<div class="ad">
+					<div class="ad animate-box">
 						<div class="ad-over"></div>
 						<div class="ad-content ">
 							<h2>Wedding Plan</h2>
@@ -303,7 +303,7 @@
 							</li>						
 						</ul>
 					</div>
-					<div class="ad">
+					<div class="ad animate-box">
 						<div class="ad-over"></div>
 						<div class="ad-content ">
 							<h2>Wedding Plan</h2>
@@ -373,29 +373,32 @@
 							</li>
 							<li class="item">
 								<img src="../images/pics/loading.gif" data-original="../images/pics/to/to19.jpg" />
-							</li><li class="item">
-							<img src="../images/pics/loading.gif" data-original="../images/pics/to/to20.jpg" />
-						</li>
-						<li class="item">
-							<img src="../images/pics/loading.gif" data-original="../images/pics/to/to21.jpg" />
-						</li>
-						<li class="item">
-							<img src="../images/pics/loading.gif" data-original="../images/pics/to/to22.jpg" />
-						</li><li class="item">
-						<img src="../images/pics/loading.gif" data-original="../images/pics/to/to23.jpg" />
-					</li>
-					<li class="item">
-						<img src="../images/pics/loading.gif" data-original="../images/pics/to/to24.jpg" />
-					</li>
-					<li class="item">
-						<img src="../images/pics/loading.gif" data-original="../images/pics/to/to25.jpg" />
-					</li><li class="item">
-					<img src="../images/pics/loading.gif" data-original="../images/pics/to/to26.jpg" />
-				</li>		
-			</ul>
-		</div>
-	</div>
-</div>
+							</li>
+							<li class="item">
+								<img src="../images/pics/loading.gif" data-original="../images/pics/to/to20.jpg" />
+							</li>
+							<li class="item">
+								<img src="../images/pics/loading.gif" data-original="../images/pics/to/to21.jpg" />
+							</li>
+							<li class="item">
+								<img src="../images/pics/loading.gif" data-original="../images/pics/to/to22.jpg" />
+							</li>
+							<li class="item">
+								<img src="../images/pics/loading.gif" data-original="../images/pics/to/to23.jpg" />
+							</li>
+							<li class="item">
+								<img src="../images/pics/loading.gif" data-original="../images/pics/to/to24.jpg" />
+							</li>
+							<li class="item">
+								<img src="../images/pics/loading.gif" data-original="../images/pics/to/to25.jpg" />
+							</li>
+							<li class="item">
+								<img src="../images/pics/loading.gif" data-original="../images/pics/to/to26.jpg" />
+							</li>		
+						</ul>
+					</div>
+				</div>
+			</div>
 
 
 
