--- a/view/theme.html
+++ b/view/theme.html
@@ -68,8 +68,8 @@
 			==================================================== -->				
 			<div id="wedding-subtitles" class="theme-cover">
 				<div class="wedding-overlay"></div>
-				<div class="wedding-cover text-center"  data-stellar-background-ratio="0.5" >
-					<div class="desc animate-box fadeInUp animated">
+				<div class="wedding-cover text-center"  data-stellar-background-ratio="0.5" style="background-image: url(../images/theme-bg.jpg);">
+					<div class="desc">
 						<h2>一千种美丽，一千种幸福</h2>						
 					</div>
 				</div>
@@ -147,7 +147,7 @@
 
 				<div class="lift-target">
 					<div id="west">
-						<div class="lift-title">
+						<div class="lift-title animate-box">
 							<div class="big">
 								<h2>West<span>西方</span></h2>
 							</div>
@@ -155,7 +155,7 @@
 						</div>
 						<div class="container">
 							<div class="row ">
-								<div class="col-md-3 col-sm-6 col-xs-12">
+								<div class="col-md-3 col-sm-6 col-xs-12 animate-box">
 									<div class="hover">
 										<img class="img-responsive" src="../images/theme/west/w1.jpg">
 										<div class="overlay">
@@ -163,7 +163,7 @@
 										</div>	
 									</div>
 								</div>
-								<div class="col-md-3 col-sm-6 col-xs-12">
+								<div class="col-md-3 col-sm-6 col-xs-12 animate-box">
 									<div class="hover">
 										<img class="img-responsive" src="../images/theme/west/w2.jpg">
 										<div class="overlay">
@@ -171,7 +171,7 @@
 										</div>	
 									</div>
 								</div>
-								<div class="col-md-3 col-sm-6 col-xs-12">
+								<div class="col-md-3 col-sm-6 col-xs-12 animate-box">
 									<div class="hover">
 										<img class="img-responsive" src="../images/theme/west/w3.jpg">
 										<div class="overlay">
@@ -179,7 +179,7 @@
 										</div>	
 									</div>
 								</div>
-								<div class="col-md-3 col-sm-6 col-xs-12">
+								<div class="col-md-3 col-sm-6 col-xs-12 animate-box">
 									<div class="hover">
 										<img class="img-responsive" src="../images/theme/west/w4.jpg">
 										<div class="overlay">
@@ -187,7 +187,7 @@
 										</div>	
 									</div>
 								</div>
-								<div class="col-md-3 col-sm-6 col-xs-12">
+								<div class="col-md-3 col-sm-6 col-xs-12 animate-box">
 									<div class="hover">
 										<img class="img-responsive" src="../images/theme/west/w5.jpg">
 										<div class="overlay">
@@ -195,7 +195,7 @@
 										</div>	
 									</div>
 								</div>
-								<div class="col-md-3 col-sm-6 col-xs-12">
+								<div class="col-md-3 col-sm-6 col-xs-12 animate-box">
 									<div class="hover">
 										<img class="img-responsive" src="../images/theme/west/w6.jpg">
 										<div class="overlay">
@@ -203,7 +203,7 @@
 										</div>	
 									</div>
 								</div>
-								<div class="col-md-3 col-sm-6 col-xs-12">
+								<div class="col-md-3 col-sm-6 col-xs-12 animate-box">
 									<div class="hover">
 										<img class="img-responsive" src="../images/theme/west/w7.jpg">
 										<div class="overlay">
@@ -211,7 +211,7 @@
 										</div>	
 									</div>
 								</div>
-								<div class="col-md-3 col-sm-6 col-xs-12">
+								<div class="col-md-3 col-sm-6 col-xs-12 animate-box">
 									<div class="hover">
 										<img class="img-responsive" src="../images/theme/west/w8.jpg">
 										<div class="overlay">
@@ -225,7 +225,7 @@
 
 					</div>
 					<div id="gu">
-						<div class="lift-title">
+						<div class="lift-title animate-box">
 							<div class="big">
 								<h2>Retro<span>古色</span></h2>
 							</div>
@@ -233,7 +233,7 @@
 						</div>
 						<div class="container">
 							<div class="row ">
-								<div class="col-md-3 col-sm-6 col-xs-12">
+								<div class="col-md-3 col-sm-6 col-xs-12 animate-box">
 									<div class="hover">
 										<img class="img-responsive" src="../images/theme/gu/gu1.jpg">
 										<div class="overlay">
@@ -241,7 +241,7 @@
 										</div>	
 									</div>
 								</div>
-								<div class="col-md-3 col-sm-6 col-xs-12">
+								<div class="col-md-3 col-sm-6 col-xs-12 animate-box">
 									<div class="hover">
 										<img class="img-responsive" src="../images/theme/gu/gu2.jpg">
 										<div class="overlay">
@@ -249,7 +249,7 @@
 										</div>	
 									</div>
 								</div>
-								<div class="col-md-3 col-sm-6 col-xs-12">
+								<div class="col-md-3 col-sm-6 col-xs-12 animate-box">
 									<div class="hover">
 										<img class="img-responsive" src="../images/theme/gu/gu3.jpg">
 										<div class="overlay">
@@ -257,7 +257,7 @@
 										</div>	
 									</div>
 								</div>
-								<div class="col-md-3 col-sm-6 col-xs-12">
+								<div class="col-md-3 col-sm-6 col-xs-12 animate-box">
 									<div class="hover">
 										<img class="img-responsive" src="../images/theme/gu/gu4.jpg">
 										<div class="overlay">
@@ -265,7 +265,7 @@
 										</div>	
 									</div>
 								</div>
-								<div class="col-md-3 col-sm-6 col-xs-12">
+								<div class="col-md-3 col-sm-6 col-xs-12 animate-box">
 									<div class="hover">
 										<img class="img-responsive" src="../images/theme/gu/gu5.jpg">
 										<div class="overlay">
@@ -273,7 +273,7 @@
 										</div>	
 									</div>
 								</div>
-								<div class="col-md-3 col-sm-6 col-xs-12">
+								<div class="col-md-3 col-sm-6 col-xs-12 animate-box">
 									<div class="hover">
 										<img class="img-responsive" src="../images/theme/gu/gu6.jpg">
 										<div class="overlay">
@@ -281,7 +281,7 @@
 										</div>	
 									</div>
 								</div>
-								<div class="col-md-3 col-sm-6 col-xs-12">
+								<div class="col-md-3 col-sm-6 col-xs-12 animate-box">
 									<div class="hover">
 										<img class="img-responsive" src="../images/theme/gu/gu7.jpg">
 										<div class="overlay">
@@ -289,7 +289,7 @@
 										</div>	
 									</div>
 								</div>
-								<div class="col-md-3 col-sm-6 col-xs-12">
+								<div class="col-md-3 col-sm-6 col-xs-12 animate-box">
 									<div class="hover">
 										<img class="img-responsive" src="../images/theme/gu/gu8.jpg">
 										<div class="overlay">
@@ -301,7 +301,7 @@
 						</div>
 					</div>
 					<div id="dream">
-						<div class="lift-title">
+						<div class="lift-title animate-box">
 							<div class="big">
 								<h2>Dream<span>梦幻</span></h2>
 							</div>
@@ -309,7 +309,7 @@
 						</div>	
 						<div class="container">
 							<div class="row ">
-								<div class="col-md-3 col-sm-6 col-xs-12">
+								<div class="col-md-3 col-sm-6 col-xs-12 animate-box">
 									<div class="hover">
 										<img class="img-responsive" src="../images/theme/dream/d1.jpg">
 										<div class="overlay">
@@ -317,7 +317,7 @@
 										</div>	
 									</div>
 								</div>
-								<div class="col-md-3 col-sm-6 col-xs-12">
+								<div class="col-md-3 col-sm-6 col-xs-12 animate-box">
 									<div class="hover">
 										<img class="img-responsive" src="../images/theme/dream/d2.jpg">
 										<div class="overlay">
@@ -325,7 +325,7 @@
 										</div>	
 									</div>
 								</div>
-								<div class="col-md-3 col-sm-6 col-xs-12">
+								<div class="col-md-3 col-sm-6 col-xs-12 animate-box">
 									<div class="hover">
 										<img class="img-responsive" src="../images/theme/dream/d3.jpg">
 										<div class="overlay">
@@ -333,7 +333,7 @@
 										</div>	
 									</div>
 								</div>
-								<div class="col-md-3 col-sm-6 col-xs-12">
+								<div class="col-md-3 col-sm-6 col-xs-12 animate-box">
 									<div class="hover">
 										<img class="img-responsive" src="../images/theme/dream/d4.jpg">
 										<div class="overlay">
@@ -341,7 +341,7 @@
 										</div>	
 									</div>
 								</div>
-								<div class="col-md-3 col-sm-6 col-xs-12">
+								<div class="col-md-3 col-sm-6 col-xs-12 animate-box">
 									<div class="hover">
 										<img class="img-responsive" src="../images/theme/dream/d5.jpg">
 										<div class="overlay">
@@ -349,7 +349,7 @@
 										</div>	
 									</div>
 								</div>
-								<div class="col-md-3 col-sm-6 col-xs-12">
+								<div class="col-md-3 col-sm-6 col-xs-12 animate-box">
 									<div class="hover">
 										<img class="img-responsive" src="../images/theme/dream/d6.jpg">
 										<div class="overlay">
@@ -357,7 +357,7 @@
 										</div>	
 									</div>
 								</div>
-								<div class="col-md-3 col-sm-6 col-xs-12">
+								<div class="col-md-3 col-sm-6 col-xs-12 animate-box">
 									<div class="hover">
 										<img class="img-responsive" src="../images/theme/dream/d7.jpg">
 										<div class="overlay">
@@ -365,7 +365,7 @@
 										</div>	
 									</div>
 								</div>
-								<div class="col-md-3 col-sm-6 col-xs-12">
+								<div class="col-md-3 col-sm-6 col-xs-12 animate-box">
 									<div class="hover">
 										<img class="img-responsive" src="../images/theme/dream/d8.jpg">
 										<div class="overlay">
@@ -377,7 +377,7 @@
 						</div>
 					</div>
 					<div id="modern">
-						<div class="lift-title">
+						<div class="lift-title animate-box">
 							<div class="big">
 								<h2>Modern<span>现代</span></h2>
 							</div>
@@ -385,7 +385,7 @@
 						</div>
 						<div class="container">
 							<div class="row ">
-								<div class="col-md-3 col-sm-6 col-xs-12">
+								<div class="col-md-3 col-sm-6 col-xs-12 animate-box">
 									<div class="hover">
 										<img class="img-responsive" src="../images/theme/modern/mo1.jpg">
 										<div class="overlay">
@@ -393,7 +393,7 @@
 										</div>	
 									</div>
 								</div>
-								<div class="col-md-3 col-sm-6 col-xs-12">
+								<div class="col-md-3 col-sm-6 col-xs-12 animate-box">
 									<div class="hover">
 										<img class="img-responsive" src="../images/theme/modern/mo2.jpg">
 										<div class="overlay">
@@ -401,7 +401,7 @@
 										</div>	
 									</div>
 								</div>
-								<div class="col-md-3 col-sm-6 col-xs-12">
+								<div class="col-md-3 col-sm-6 col-xs-12 animate-box">
 									<div class="hover">
 										<img class="img-responsive" src="../images/theme/modern/mo3.jpg">
 										<div class="overlay">
@@ -409,7 +409,7 @@
 										</div>	
 									</div>
 								</div>
-								<div class="col-md-3 col-sm-6 col-xs-12">
+								<div class="col-md-3 col-sm-6 col-xs-12 animate-box">
 									<div class="hover">
 										<img class="img-responsive" src="../images/theme/modern/mo4.jpg">
 										<div class="overlay">
@@ -417,7 +417,7 @@
 										</div>	
 									</div>
 								</div>
-								<div class="col-md-3 col-sm-6 col-xs-12">
+								<div class="col-md-3 col-sm-6 col-xs-12 animate-box">
 									<div class="hover">
 										<img class="img-responsive" src="../images/theme/modern/mo5.jpg">
 										<div class="overlay">
@@ -425,7 +425,7 @@
 										</div>	
 									</div>
 								</div>
-								<div class="col-md-3 col-sm-6 col-xs-12">
+								<div class="col-md-3 col-sm-6 col-xs-12 animate-box">
 									<div class="hover">
 										<img class="img-responsive" src="../images/theme/modern/mo6.jpg">
 										<div class="overlay">
@@ -433,7 +433,7 @@
 										</div>	
 									</div>
 								</div>
-								<div class="col-md-3 col-sm-6 col-xs-12">
+								<div class="col-md-3 col-sm-6 col-xs-12 animate-box">
 									<div class="hover">
 										<img class="img-responsive" src="../images/theme/modern/mo7.jpg">
 										<div class="overlay">
@@ -441,7 +441,7 @@
 										</div>	
 									</div>
 								</div>
-								<div class="col-md-3 col-sm-6 col-xs-12">
+								<div class="col-md-3 col-sm-6 col-xs-12 animate-box">
 									<div class="hover">
 										<img class="img-responsive" src="../images/theme/modern/mo8.jpg">
 										<div class="overlay">
