--- a/view/arrange.html
+++ b/view/arrange.html
@@ -46,7 +46,7 @@
 									<li class="dropdown">
 										<a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">主题婚礼<span class="caret"></span></a>
 										<ul class="dropdown-menu">
-											<li><a href="./theme.html#west" target="_blank">西方</a></li>
+											<li><a href="./theme.html" target="_blank">西方</a></li>
 											<li><a href="./theme.html#ancient" target="_blank">古色</a></li>
 											<li><a href="./theme.html#dream" target="_blank">梦幻</a></li>
 											<li><a href="./theme.html#modern" target="_blank">现代</a></li>	
@@ -68,8 +68,8 @@
 			==================================================== -->				
 			<div id="wedding-subtitles" class="arrange-cover">
 				<div class="wedding-overlay"></div>
-				<div class="wedding-cover text-center"  data-stellar-background-ratio="0.5" >
-					<div class="desc animate-box fadeInUp animated">
+				<div class="wedding-cover text-center"  data-stellar-background-ratio="0.5" style=" background-image: url(../images/arrang.jpg);">
+					<div class="desc">
 						<h2>每一处的完美，精心以待</h2>						
 					</div>
 				</div>
@@ -80,13 +80,13 @@
 			==================================================== -->	
 			<div id="wedding-arrange">
 				<div class="container">
-					<div class="arrange-top">
+					<div class="arrange-top animate-box">
 						<h2><span></span>WE CAN DO</h2>
 					</div>
 					<div class="row">
 						<div class="col-md-7">
-							<p>一场完美的婚礼，作为宣誓自已经找到了生命中的另一半的神圣场地，婚礼的布置至关重要。我们严格把控每一丝细节，追求完美。婚礼布置是营造现场气氛的重要内容，完美的婚礼场布是更新人给宾客最直接的形象感觉，很多新人都很重视自己的婚礼布置，但是往往花了很多钱却没有达到自己想要的感觉和现场氛围，考察单项的设计很成 功，整体的规划也没问题，只是整体的感觉差强人意，原因在于其婚礼布置存在一定的误区，盲目追风和不专业的整体设计抹杀了婚礼现场的整体存在感和统一性。</p>
-							<p>根据客户对于主题的不同选择，我们将做出具体的布置。对于细节我们是十分看重的，所以即使是餐具的布置都会吻合主题，让整个婚礼现场完美统一。婚桌，仪式区，甜品，酒店，我们都有很好的细分。</p>
+							<p class="animate-box">一场完美的婚礼，作为宣誓自已经找到了生命中的另一半的神圣场地，婚礼的布置至关重要。我们严格把控每一丝细节，追求完美。婚礼布置是营造现场气氛的重要内容，完美的婚礼场布是更新人给宾客最直接的形象感觉，很多新人都很重视自己的婚礼布置，但是往往花了很多钱却没有达到自己想要的感觉和现场氛围，考察单项的设计很成 功，整体的规划也没问题，只是整体的感觉差强人意，原因在于其婚礼布置存在一定的误区，盲目追风和不专业的整体设计抹杀了婚礼现场的整体存在感和统一性。</p>
+							<p class="animate-box">根据客户对于主题的不同选择，我们将做出具体的布置。对于细节我们是十分看重的，所以即使是餐具的布置都会吻合主题，让整个婚礼现场完美统一。婚桌，仪式区，甜品，酒店，我们都有很好的细分。</p>
 							<div class="arrange-content">
 								<div class="row">
 									<div class="col-md-6">
@@ -116,7 +116,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-md-5">
+						<div class="col-md-5 animate-box">
 							<img src="../images/arrange-top.jpg">
 						</div>
 					</div>
@@ -128,7 +128,7 @@
 			<div id="wedding-concrete">
 				<div class="container">
 					<div class="box">
-						<div class="arrange-top">
+						<div class="arrange-top animate-box">
 							<h2><span></span>圆桌布置</h2>
 						</div>
 						<div class="row">
@@ -160,7 +160,7 @@
 					</div>
 					
 					<div class="box">
-						<div class="arrange-top">
+						<div class="arrange-top animate-box">
 							<h2><span></span>长桌布置</h2>
 						</div>
 						<div class="row">
@@ -192,7 +192,7 @@
 					</div>
 					
 					<div class="box">
-						<div class="arrange-top">
+						<div class="arrange-top animate-box">
 							<h2><span></span>婚礼仪式区</h2>
 						</div>
 						<div class="row">
@@ -224,7 +224,7 @@
 					</div>
 					
 					<div class="box">
-						<div class="arrange-top">
+						<div class="arrange-top animate-box">
 							<h2><span></span>婚礼甜点</h2>
 						</div>
 						<div class="row">
