--- a/view/dress.html
+++ b/view/dress.html
@@ -69,8 +69,8 @@
 				==================================================== -->
 				<div id="wedding-subtitles">
 					<div class="wedding-overlay"></div>
-					<div class="wedding-cover text-center" id="dress-cover" data-stellar-background-ratio="0.5" >
-						<div class="desc animate-box fadeInUp animated">
+					<div class="wedding-cover text-center" id="dress-cover" data-stellar-background-ratio="0.5" style="background-image: url(../images/dress-top.jpg);">
+						<div class="desc">
 							<h2>选我所爱，爱我所选！</h2>						
 						</div>
 					</div>
@@ -83,14 +83,14 @@
 				<div id="wedding-select">
 					<div class="container">
 						<div class="row">
-							<div class="col-md-8 col-md-offset-2 text-center heading-section ">
+							<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box ">
 								<h3>如何挑选</h3>
 								<p>我们在全国各大城市设有婚纱体验馆，馆内陈列着最新款的主打礼服，您可以在馆内挑选试穿。婚纱来自与我们合作的各大公司，和独立设计师们，您可以在网上选定，店内试穿。</p>
 							</div>
 						</div>
 					</div>
-					<div class="container">
-						<div class="row row-bottom-padded-md">
+					<div class="container ">
+						<div class="row row-bottom-padded-md animate-box">
 							<div class="slide-header">
 								<div class="banner">
 									<div id="slide3d" class="slide-carousel slide-3d">
@@ -164,7 +164,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="row">
+						<div class="row animate-box">
 							<div class="col-md-8 col-md-offset-2 ">
 								<h3>独立定制</h3>
 								<p>如果您希望拥有一件独属于您的礼服，我们也能为您提供独特的定制服务。由顶尖设计师为您打造专属，不列入商品范畴，不会多版贩卖。世间仅此一件的美，您，心动了吗？</p>
@@ -179,14 +179,14 @@
 				==================================================== -->
 				<div id="wedding-dress">				
 					<div class="container">
-						<div class="row">
+						<div class="row animate-box">
 							<div class="col-md-12">
 								<div class="section-title text-center">
 									<h2>礼服展示</h2>
 								</div>
 							</div>
 						</div>
-						<div id="tabs">
+						<div id="tabs" class="animate-box">
 							<nav class="tabs-nav">
 								<a href="javascript:void(0)" class="active" data-tab="tab1">
 									<span>欧式奢华</span>
