--- a/view/global.html
+++ b/view/global.html
@@ -46,7 +46,7 @@
 									<li class="dropdown">
 										<a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">主题婚礼<span class="caret"></span></a>
 										<ul class="dropdown-menu">
-											<li><a href="./theme.html#west" target="_blank">西方</a></li>
+											<li><a href="./theme.html" target="_blank">西方</a></li>
 											<li><a href="./theme.html#ancient" target="_blank">古色</a></li>
 											<li><a href="./theme.html#dream" target="_blank">梦幻</a></li>
 											<li><a href="./theme.html#modern" target="_blank">现代</a></li>	
@@ -68,8 +68,8 @@
 			==================================================== -->				
 			<div id="wedding-subtitles" class="global-cover">
 				<div class="wedding-overlay"></div>
-				<div class="wedding-cover text-center"  data-stellar-background-ratio="0.5" >
-					<div class="desc animate-box fadeInUp animated">
+				<div class="wedding-cover text-center"  data-stellar-background-ratio="0.5" style=" background-image: url(../images/global.jpg);">
+					<div class="desc">
 						<h2>为爱旅行，因爱同行</h2>						
 					</div>
 				</div>
@@ -102,7 +102,7 @@
 					<p class="animate-box">让世界听见你的幸福，让镜头记下你的美丽</p>
 				</div>
 
-				<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+				<div id="carousel-example-generic" class="carousel slide animate-box" data-ride="carousel">
 					<!-- Indicators -->
 					<ol class="carousel-indicators">
 						<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
